--- a/data-types.Rmd
+++ b/data-types.Rmd
@@ -170,16 +170,59 @@ There’s a lot more that can be said about data frames: they’re fairly compli
 
 ### Using square brackets
 
-DO THIS
+Tibbles and data frames both use the `$` operator in the same way. So regardless of whether `dat` is a tibble or pure data drame, `dat$RT` refers to the response time variable (a numeric vector), and `dat$RT[5]` is the response time of the fifth participant:
+```{r}
+dat$RT[5]
+```
+There's another way in which we can extract this information. Because data frames and tibbles are rectangular, we could specify the row and column number (or name) directly within the square brackets. These two commands both refer to the same cell as `dat$RT[5]`...
+```{r,eval = FALSE}
+dat[5,3]
+dat[5,"RT"]
+```
+... but the format in which they return the answer is different. Because `dat` is a tibble, the result *remains a tibble*
+```{r}
+dat[5,3]
+```
 
+The reason tibbles work like this becomes clear if we try to us the square brackets to pick out a single row or a single column:
+
+```{r}
+dat[2,]
+dat[,2]
+```
+
+The result in both cases *remains a tibble*. For tibbles, the rule is very simple: any time you use the square brackets to index a tibble, the result is always a tibble. That would not necessarily be the case for a pure data frame. To illustrate, the tables below show the kind of object that is returned by different indexing commands. For square brackets:
+
+```{r,echo=FALSE}
+df <- tibble(
+  "command" = c("dat[1,1]", "dat[1,]", "dat[,1]", "dat[2:3,]","dat[,2:3]"),
+  "data frame" = c("element", "data frame", "vector", "data frame", "data frame"),
+  "tibble" = c("tibble", "tibble", "tibble", "tibble", "tibble")
+)
+knitr::kable(df)
+rm(df)
+```
+  
+In contrast, when using `$` both versions behave the same:
+
+```{r,echo=FALSE}
+df <- tibble(
+  "command" = c("dat", "dat$RT", "dat$RT[1]"),
+  "data frame" = c("data frame", "vector", "element"),
+  "tibble" = c("tibble", "vector", "element")
+)
+knitr::kable(df)
+rm(df)
+```  
+  
 ### Summary
 
 Data frames and tibbles are mostly used to describe data that take the form of a *case by variable* structure: each row is a case 
-(e.g., a person) and each column is a variable (e.g., measurement). Case by variable structures are fundamentally a symmetric because the rows and columns have qualitatively different meaning. They follow a version of the Anna Karenina principle:
+(e.g., a person) and each column is a variable (e.g., measurement). Case by variable structures are fundamentally asymmetric because the rows and columns have qualitatively different meaning. They follow a version of the Anna Karenina principle:
 
 > Cases are all alike; every variable varies in its own way
 
-Two people who provide data will always provide data in the same format (if they don't then you can't organise the data this way), but two variables can be different in many different ways: one column might be numeric, another is a factor, yet another might contains dates. Many psychological data sets have this characteristic. Others do not, so it is worth talking about a few other data structures that arise quite frequently!
+Two participants who provide data will always provide data in the same format (if they don't then you can't organise the data this way), but two variables can be different in many different ways: one column might be numeric, another is a factor, yet another might contains dates. Many psychological data sets have this characteristic. Others do not, so it is worth talking about a few other data structures that arise quite frequently!
 
 ## Matrices
 
